# Archinstalltema

./: .gitignore  LICENSE  README.md  claude_code_prompt.md  install.sh  pyproject.toml  recovery.sh
arch_installer/: __main__.py  config.py  constants.py  exceptions.py  i18n.py  main.py
arch_installer/stages/: __init__.py  aur.py  base_install.py  base_stage.py  bootloader.py  dev_tools.py  disk.py  finalize.py  gnome.py  multilib.py  network.py  nvidia.py  preflight.py  system_config.py  udev_rules.py  vscode_claude.py
arch_installer/ui/: banner.py  error_screen.py  progress.py  summary.py  theme.py  wizard.py
arch_installer/utils/: chroot.py  logger.py  shell.py  system_info.py  validators.py
assets/systemd/: system-update.service  system-update.timer
assets/udev/: 99-microcontrollers.rules
tests/: test_config.py  test_ui_demo.py  test_validators.py
